rules_iptables
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -i lo -j CT --notrack
-A PREROUTING -p tcp -m multiport --dports 80 -j CT --notrack
-A PREROUTING -p tcp -m multiport --sports 80 -j CT --notrack
-A OUTPUT -o lo -j CT --notrack
-A OUTPUT -p tcp -m multiport --sports 80 -j CT --notrack
-A OUTPUT -p tcp -m multiport --dports 80 -j CT --notrack
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i eth0 -p tcp -m multiport --dports 80,8388 -j ACCEPT
-A INPUT -i eth0 -p tcp -m multiport --sports 80,443 -j ACCEPT
-A INPUT -i eth0 -p udp -m multiport --dports 60000:61000 -j ACCEPT # for mosh
-A INPUT -i eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -m recent --set --name SSH --rsource -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -m recent --update --seconds 60 --hitcount 10 --rttl --name SSH --rsource -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i eth0 -j DROP
COMMIT
